
        * make https not fail (that's curl's responsibility, really).

2011-01-31  Carsten Haitzler (The Rasterman)

        * Fix: ecore-evas CAN send "render done" messages even if not
        waiting for sync counter when using gl engine. new semi-sync
        mode to account for that.

2011-02-20 Vincent Torri

	* Ecore_Win32: improve resize of windows and fix key up event for
	the 'space' key.
	* Ecore_WinCE: do not erase a window background

2011-02-24 Vincent Torri

	* Ecore_File: fix compilation when ecore_con and curl are not
	available

2011-03-01 Guillaume Friloux

	* Fix detection of complete file write in ecore_file inotify.

2011-03-19 Mike Blumenkrantz

        * Fix crash in ecore_con_ssl related to attempted connections on a dead socket

2011-03-23  Elixirious

	* Fix: ecore_con_url_ftp_upload upload the file until the end.

2011-03-23  Carsten Haitzler (The Rasterman)

        * Fix: ecore-evas interceptor didn't handle override-redirect
        windows correctly, expecting a feed-back event from x, which it didn't
        get.

2011-04-11  Hannes Janetzek

	* Fix removal of windows from ignore_list with ecore_x_window_ignore_set

2011-04-15  Carsten Haitzler (The Rasterman)

        * Fix bug in Ecore_Evas setting modifiers for
        sub-buffer-canvas. They never got set. Now they do.

2011-05-03  Carsten Haitzler (The Rasterman)

        * Fixed null pointer dereference in selection notification
        handling in Ecore_X.

2011-05-19  Carsten Haitzler (The Rasterman)

        * Fix Ecore_X shadow tree search handling to respect shape and
        shape input of windows.

2011-05-20 Daniel Juyung Seo (SeoZ)

        * Ecore ecore_main.c: Fixed ecore_main_loop
        (_ecore_main_loop_iterate_internal). This fixes fd handler pending
        issue when ecore_idler callback adds ecore_job/event.
        * Ecore ecore_main.c: Refactoring _ecore_main_loop_iterate_internal().

2011-05-23  Cedric Bail

	1.0.1 release
