@@ -71,3 +71,6 @@
 
 	1.0.1 release
 
+2011-06-16  Cedric Bail
+
+	* Fix ecore_x_selection_convert not taking selection length into account.
